Avanzamento header (provvisorio)

--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
     <header>
+        <div>
+            <img id="logo" src="img/logo.svg" alt="Logo The Booleaner">
+        </div>
+
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+
+        <p>Scritto da <span>The Booleaner</span></p>
+        <p>il 10/10/2020</p>
+
+        <img src="img/tim-1.jpg" alt="">
+        <img src="img/tim-2.jpg" alt="">
 
     </header>
 
     <main>
 
+
     </main>
 
     <footer>
-        
+
     </footer>
     
 </body>
