Completamento base del main

--- a/index.html
+++ b/index.html
@@ -21,11 +21,57 @@
         <img src="img/tim-1.jpg" alt="">
         <img src="img/tim-2.jpg" alt="">
 
+        <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+        <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+
     </header>
 
     <main>
 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. A corrupti perferendis velit, impedit sit excepturi in eaque tenetur ab eos commodi, beatae illum consequuntur totam? Vel qui obcaecati eveniet expedita.
+        Velit sapiente commodi eligendi provident fuga? Corrupti sapiente consectetur, totam dolore veniam necessitatibus assumenda, temporibus nulla veritatis sequi modi cumque error porro eius delectus, vitae ea? Ratione non quas similique.
+        Error eius voluptate excepturi, perspiciatis voluptatem labore in quisquam. Fugit, quasi illo voluptates vitae voluptatum ratione autem vero quae. Necessitatibus ipsa amet nobis neque. Natus ex quisquam doloribus dolore hic.
+        Voluptas perspiciatis temporibus totam, placeat similique, voluptates ad voluptate sit commodi at obcaecati quia modi doloribus quisquam sint culpa, sapiente quae dignissimos cum eos delectus inventore porro reprehenderit? Doloribus, dicta.
 
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dicta quos, a voluptates dignissimos accusantium quo asperiores rerum nemo recusandae omnis sit. Explicabo corrupti incidunt ipsa culpa labore minima minus.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, fugiat quas. Ex distinctio quidem vel non, odio eveniet odit consequuntur nesciunt in nam quod, hic, iusto tempore pariatur fugiat sit.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. In corrupti quidem omnis totam quis perferendis veritatis nam veniam doloribus soluta! Sunt, ea minus fugit molestias asperiores doloremque atque repellat delectus?</li>
+        </ul>
+
+        <table>
+            <thead>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio modi assumenda consectetur dignissimos minima, atque totam in quis velit obcaecati sint voluptates excepturi illo, sit repellendus delectus doloribus amet. Deleniti!</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio modi assumenda consectetur dignissimos minima, atque totam in quis velit obcaecati sint voluptates excepturi illo, sit repellendus delectus doloribus amet. Deleniti!</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio modi assumenda consectetur dignissimos minima, atque totam in quis velit obcaecati sint voluptates excepturi illo, sit repellendus delectus doloribus amet. Deleniti!</td>
+                </tr>
+            </tbody>
+        </table>
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ut autem, vel dolor nam aliquid quo aut repellendus dolorem obcaecati qui ea, id expedita quibusdam nesciunt blanditiis tempore ipsum deleniti.
+        Minus voluptas exercitationem dignissimos incidunt fuga unde nisi expedita eligendi laboriosam odio rerum harum alias vel quas ratione porro, veniam corrupti ipsam nihil doloribus quos obcaecati, voluptate sequi facilis? Harum.
+        Voluptates velit eligendi iste nisi fugiat aut? Eligendi veniam omnis ipsa esse voluptates cupiditate nihil minima illum. Mollitia tempore ut fugit culpa nulla, ipsum, eos excepturi repudiandae beatae non nam?
+        Commodi, nihil consequuntur eum corporis molestiae sint quis officiis distinctio repellendus magni eveniet doloribus optio dolorem voluptatem aliquid culpa quaerat quasi. Possimus, rerum nemo ipsam consectetur similique aspernatur beatae ipsum.
+    
     </main>
 
     <footer>
