Riorganizzazione strutturale html

--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
 <body>
 
     <header>
-        <div>
+
+        <div class="div-logo">
             <img id="logo" src="img/logo.svg" alt="Logo The Booleaner">
         </div>
+
+    </header>
+
+    <main>
 
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
 
         <p>Scritto da <span>The Booleaner</span></p>
         <p>il 10/10/2020</p>
 
-        <img src="img/tim-1.jpg" alt="">
-        <img src="img/tim-2.jpg" alt="">
+        <img src="img/tim-1.jpg" alt="" />
+        <img src="img/tim-2.jpg" alt="" />
 
         <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
         <p>2nd Photo: Wikimedia, by Paul Clarke</p>
-
-    </header>
-
-    <main>
 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. A corrupti perferendis velit, impedit sit excepturi in eaque tenetur ab eos commodi, beatae illum consequuntur totam? Vel qui obcaecati eveniet expedita.
         Velit sapiente commodi eligendi provident fuga? Corrupti sapiente consectetur, totam dolore veniam necessitatibus assumenda, temporibus nulla veritatis sequi modi cumque error porro eius delectus, vitae ea? Ratione non quas similique.
@@ -42,9 +43,9 @@
         <table>
             <thead>
                 <tr>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
+                    <th class="th25">Lorem ipsum dolor</th>
+                    <th class="th25">Lorem ipsum dolor</th>
+                    <th class="th50">Lorem ipsum dolor</th>
                 </tr>
             </thead>
 
@@ -75,6 +76,11 @@
     </main>
 
     <footer>
+        Potrebbero interessarti
+
+        <div>
+
+        </div>
 
     </footer>
     
