--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <header>
+    <header> <!--Intestazione con logo-->
 
         <div class="div-logo">
             <img id="logo" src="img/logo.svg" alt="Logo The Booleaner">
@@ -16,31 +16,31 @@
 
     </header>
 
-    <main>
+    <main> <!--Introduzione all'articolo con immagini-->
 
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
 
-        <p>Scritto da <span>The Booleaner</span></p>
+        <p>Scritto da <span class="lightblu-p">The Booleaner</span></p>
         <p>il 10/10/2020</p>
 
-        <img src="img/tim-1.jpg" alt="" />
-        <img src="img/tim-2.jpg" alt="" />
+        <img src="img/tim-1.jpg" alt="Foto 1 Tim Berners-Lee"/>
+        <img src="img/tim-2.jpg" alt="Foto 2 Tim Berners-Lee"/>
 
         <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
         <p>2nd Photo: Wikimedia, by Paul Clarke</p>
 
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. A corrupti perferendis velit, impedit sit excepturi in eaque tenetur ab eos commodi, beatae illum consequuntur totam? Vel qui obcaecati eveniet expedita.
-        Velit sapiente commodi eligendi provident fuga? Corrupti sapiente consectetur, totam dolore veniam necessitatibus assumenda, temporibus nulla veritatis sequi modi cumque error porro eius delectus, vitae ea? Ratione non quas similique.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A corrupti perferendis velit, impedit sit excepturi in eaque tenetur ab eos commodi, beatae illum consequuntur totam? Vel qui obcaecati eveniet expedita.
+        Velit sapiente commodi eligendi provident fuga?<span class="highlighted"> Corrupti sapiente consectetur, totam dolore veniam necessitatibus assumenda, temporibus nulla veritatis sequi modi cumque error porro eius delectus, vitae ea?</span> Ratione non quas similique.
         Error eius voluptate excepturi, perspiciatis voluptatem labore in quisquam. Fugit, quasi illo voluptates vitae voluptatum ratione autem vero quae. Necessitatibus ipsa amet nobis neque. Natus ex quisquam doloribus dolore hic.
-        Voluptas perspiciatis temporibus totam, placeat similique, voluptates ad voluptate sit commodi at obcaecati quia modi doloribus quisquam sint culpa, sapiente quae dignissimos cum eos delectus inventore porro reprehenderit? Doloribus, dicta.
+        Voluptas perspiciatis temporibus totam, placeat similique, voluptates ad voluptate sit commodi at obcaecati quia modi doloribus quisquam sint culpa, sapiente quae dignissimos cum eos delectus inventore porro reprehenderit? Doloribus, dicta.</p>
 
-        <ul>
+        <ul> <!--Lista non ordinata-->
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dicta quos, a voluptates dignissimos accusantium quo asperiores rerum nemo recusandae omnis sit. Explicabo corrupti incidunt ipsa culpa labore minima minus.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, fugiat quas. Ex distinctio quidem vel non, odio eveniet odit consequuntur nesciunt in nam quod, hic, iusto tempore pariatur fugiat sit.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. In corrupti quidem omnis totam quis perferendis veritatis nam veniam doloribus soluta! Sunt, ea minus fugit molestias asperiores doloremque atque repellat delectus?</li>
         </ul>
 
-        <table>
+        <table> <!--Tabella-->
             <thead>
                 <tr>
                     <th class="th25">Lorem ipsum dolor</th>
@@ -50,7 +50,7 @@
             </thead>
 
             <tbody>
-                <tr>
+                <tr class="trcolor">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio modi assumenda consectetur dignissimos minima, atque totam in quis velit obcaecati sint voluptates excepturi illo, sit repellendus delectus doloribus amet. Deleniti!</td>
@@ -60,7 +60,7 @@
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio modi assumenda consectetur dignissimos minima, atque totam in quis velit obcaecati sint voluptates excepturi illo, sit repellendus delectus doloribus amet. Deleniti!</td>
                 </tr>
-                <tr>
+                <tr class="trcolor">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio modi assumenda consectetur dignissimos minima, atque totam in quis velit obcaecati sint voluptates excepturi illo, sit repellendus delectus doloribus amet. Deleniti!</td>
@@ -68,18 +68,25 @@
             </tbody>
         </table>
 
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ut autem, vel dolor nam aliquid quo aut repellendus dolorem obcaecati qui ea, id expedita quibusdam nesciunt blanditiis tempore ipsum deleniti.
+        <!--Conclusione-->
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ut autem, vel dolor nam aliquid quo aut repellendus dolorem obcaecati qui ea, id expedita quibusdam nesciunt blanditiis tempore ipsum deleniti.
         Minus voluptas exercitationem dignissimos incidunt fuga unde nisi expedita eligendi laboriosam odio rerum harum alias vel quas ratione porro, veniam corrupti ipsam nihil doloribus quos obcaecati, voluptate sequi facilis? Harum.
-        Voluptates velit eligendi iste nisi fugiat aut? Eligendi veniam omnis ipsa esse voluptates cupiditate nihil minima illum. Mollitia tempore ut fugit culpa nulla, ipsum, eos excepturi repudiandae beatae non nam?
-        Commodi, nihil consequuntur eum corporis molestiae sint quis officiis distinctio repellendus magni eveniet doloribus optio dolorem voluptatem aliquid culpa quaerat quasi. Possimus, rerum nemo ipsam consectetur similique aspernatur beatae ipsum.
+        Voluptates velit eligendi iste nisi fugiat aut?<span class="highlighted"> Eligendi veniam omnis ipsa esse voluptates cupiditate nihil minima illum.</span>Mollitia tempore ut fugit culpa nulla, ipsum, eos excepturi repudiandae beatae non nam?
+        Commodi, nihil consequuntur eum corporis molestiae sint quis officiis distinctio repellendus magni eveniet doloribus optio dolorem voluptatem aliquid culpa quaerat quasi. Possimus, rerum nemo ipsam consectetur similique aspernatur beatae ipsum.</p>
     
     </main>
 
-    <footer>
+    <footer> <!--Suggerimenti-->
+        
         Potrebbero interessarti
 
-        <div>
+        <div class="imgbox1">
+            Lorem ipsum dolor
+        </div>
 
+        <div class="imgbox2">
+            Lorem ipsum dolor
         </div>
 
     </footer>
